--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
         <img src="img/twelve.jpg" />
         <h4>$1,000</h4>
       </article>
+
+      <article class="home" data-price="10000">
+        <img src="img/tiny1.jpg" />
+        <h4>$10,000</h4>
+      </article>
+
+      <article class="home" data-price="15000">
+        <img src="img/tiny2.jpg" />
+        <h4>$15,000</h4>
+      </article>
+
+      <article class="home" data-price="20000">
+        <img src="img/tiny3.jpg" />
+        <h4>$20,000</h4>
+      </article>
     </section>
   </section>
 </div>
