--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Cabins For Sale</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type='text/javascript'></script>
+    <script src="bower_components/jquery/dist/jquery.js" type='text/javascript'></script>
+    <script src="bower_components/handlebars/handlebars.js" type='text/javascript'></script>
+    <script src="bower_components/lodash/lodash.js" type='text/javascript'></script>
     <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
   </head>
 <body>
